--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -1,111 +1,98 @@
-{% extends "base2.html" %} {% block title %}Home{% endblock %} {% block content %}
-      
-    <div id="wrapper">
-    <div id="headerbar"></div>
-      
-      <header>
-        <div>
-          <a href="/"><img src="{{ url_for('static', filename='images/logo3small.png') }}" /></a>
-        </div>
-        <div id="signbuttons">
-          <a class="signup" href="/sign-up">Sign Up</a> &nbsp;
-          <a href="/login" id="signin">Log In</a>
-        </div>
-      </header>
-  
-      <body>
-        <div id="bannerbar"></div>
-        <div id="homebanner">
-          <div id="hometext">
-            <h1>Reimbursements, reimagined.</h1>
-            <br />
-            <h2>
-              We make expense sharing <strong>stress-free.</strong> Split costs
-              between groups and track spending easier than ever before.<br /><br />Best
-              part? It's FREE. No catch.
-            </h2>
-            <br /><br />
-            <a href="/sign-up" class="buttonClass">Sign Up</a>
-          </div>
-  
-          <img src="{{ url_for('static', filename='images/PhoneMockup.png') }}" />
-        </div>
-  
-        <div class="homecontainer">
-          <h1 class="light">Just <span class="bold">marmo</span> it.</h1>
-        </div>
-  
-        <div id="examplescontainer">
-          <div class="example">
-            <img src="{{ url_for('static', filename='images/housemates.png') }}" />
-            <h3>Housemates</h3>
-            <p>
-              No more awkward conversations or time wasted figuring out how to
-              split rent, utilities, and groceries between housemates.
-            </p>
-          </div>
-  
-          <div class="example">
-            <img src="{{ url_for('static', filename='images/trips.png') }}" />
-            <h3>Trips</h3>
-            <p>
-              Trips are full of group expenses like hotels, travel, food, and
-              excursions. Marmo takes care of all that so you can enjoy your
-              vacation.
-            </p>
-          </div>
-  
-          <div class="example">
-            <img src="{{ url_for('static', filename='images/dinner.png') }}" />
-            <h3>Dinners</h3>
-            <p>
-              Relax and enjoy a meal with friends without worrying about how to
-              split the check. Your server will love you for it.
-            </p>
-          </div>
-        </div>
-  
-        <div id="features">
-          <div class="homecontainer" id="howitworks">
-            <h1>How It Works</h1>
-          </div>
-          <div id="record">
-            <div id="recordtext">
-              <h3>Record Transactions</h3>
-              <p>
-                Simply enter your transaction details or scan a receipt.<br /><br />All
-                members of your group can see the expense and settle up. Choose
-                between our presets or customize how the bill is split.<br /><br />Other
-                members can add transactions and we’ll take care of the math to
-                figure out who owes who.
-              </p>
-            </div>
-            <div class="imgbox">
-              <img src="{{ url_for('static', filename='images/record.png') }}" class="shrinkimg" />
-            </div>
-          </div>
-  
-          <div id="spending">
-            <div class="imgbox">
-              <img src="{{ url_for('static', filename='images/spending.png') }}" class="shrinkimg" />
-            </div>
-            <div id="spendingtext">
-              <h3>Track Spending</h3>
-              <p>
-                Each transaction is categorized so you can keep track of your
-                spending habits.<br /><br />Want to know how much that road trip
-                was? How much you spent on groceries last month? <br /><br />We
-                keep track of your transactions and present it in a useful way.
-              </p>
-            </div>
-          </div>
-        </div>
-          <div id="footerbar"></div>
-          <footer>
-            <p>Copyright &copy; 2022 Marmo Expense Sharing</p>
-            <a href="mailto:carsondidericksen@gmail.com">support@marmo.app</a>
-          </footer>
-        </div>
-      </body>
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Thu Dec 08 2022 14:31:27 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="638680ad18ec054b393b2bfe" data-wf-site="637793a71d771a399dba2d86">
+<head>
+  <meta charset="utf-8">
+  <title>Landing</title>
+  <meta content="Landing" property="og:title">
+  <meta content="Landing" property="twitter:title">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="Webflow" name="generator">
+  <link href="{{ url_for('static', filename='css/normalize.css') }}" rel="stylesheet" type="text/css">
+  <link href="{{ url_for('static', filename='css/webflow.css') }}" rel="stylesheet" type="text/css">
+  <link href="{{ url_for('static', filename='css/marmo-804e13.webflow.css') }}" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Karla:200,300,regular,500,600,700,800,200italic,300italic,italic,500italic,600italic,700italic,800italic"]  }});</script>
+  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <link href="{{ url_for('static', filename='images/favicon.png') }}" rel="shortcut icon" type="image/x-icon">
+</head>
+<body>
+  <div data-animation="default" data-collapse="tiny" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+    <div class="container centeralign">
+      <a href="/" class="navlogo w-inline-block"><img src="{{ url_for('static', filename='images/skinny_logo-removebg-preview.png') }}" loading="lazy" alt="The logo for marmo." class="nav-image"></a>
+      <div class="nav-section-container">
+        <nav role="navigation" class="nav-menu w-nav-menu">
+          <a href="sign-up" class="button nav w-button">Sign Up</a>
+          <a href="/login" class="button nav inverse w-button">Log In</a>
+        </nav>
+      </div>
+      <div class="menu-button w-nav-button">
+        <div class="w-icon-nav-menu"></div>
+      </div>
     </div>
-{% endblock %}
+  </div>
+  <div class="home-hero wf-section">
+    <div class="container">
+      <div class="_2-col-row">
+        <div class="hero-text">
+          <h1 class="hero-heading">Reimbursements,<br>reimagined.</h1>
+          <div class="hero-heading subtext">We make expense sharing <strong>stress-free.</strong> Split costs between groups and track spending easier than ever before.<br><br>Best part? It&#x27;s FREE. No catch.</div>
+          <div class="_2-col-row homehero">
+            <a href="/sign-up" class="button homehero w-button">Sign Up</a>
+            <a data-w-id="1c5a1d02-8198-321b-ad95-dc3e7b03cd0e" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" href="/test" class="button homehero ghost w-button">Try It Out</a>
+          </div>
+        </div><img src="{{ url_for('static', filename='images/PhoneMockup.png') }}" loading="lazy" sizes="300px" width="540" 
+        srcset="{{ url_for('static', filename='images/PhoneMockup-p-500.png') }} 500w, {{ url_for('static', filename='images/PhoneMockup-p-800.png') }} 800w, {{ url_for('static', filename='images/PhoneMockup-p-1080.png') }} 1080w, {{ url_for('static', filename='images/PhoneMockup.png') }} 1080w"
+        alt="A picture of a mobile device in the marmo app." class="hero-image">
+      </div>
+    </div>
+  </div>
+  <div class="about-section wf-section">
+    <h1 class="heading">Just <span class="text-span">marmo </span>it.</h1>
+    <div class="white-block">
+      <div id="w-node-_7b6d641e-c5f5-fa56-da63-115e4e92602c-393b2bfe" class="_3-col-row">
+        <div class="_3-row-col"><img src="{{ url_for('static', filename='images/housemates.png') }}" loading="lazy" id="w-node-a17b965e-a265-1e10-60f6-05f90828c4ef-393b2bfe" sizes="(max-width: 767px) 97.59375px, 150px" alt="A digital piece of art depicting a house with 3 person icons." class="image-overview">
+          <h1 id="w-node-_6e808d38-ac62-7bc6-23f6-ce8bea8119b2-393b2bfe" class="header-overview">Housemates</h1>
+          <div id="w-node-e2fca73c-c0b5-479d-bba5-c29917747ea4-393b2bfe" class="text-overview">No more awkward conversations or time wasted figuring out how to split rent, utilities, and groceries between housemates.</div>
+        </div>
+        <div class="_3-row-col"><img src="{{ url_for('static', filename='images/trips.png') }}" loading="lazy" id="w-node-_44c68bab-8d14-8a1a-3c7c-5aa43293dfa6-393b2bfe" sizes="(max-width: 767px) 97.59375px, 150px" alt="A piece of digital art depicting a vahicle with luggage on the roof." class="image-overview">
+          <h1 id="w-node-_24402f52-14cb-b598-66fd-cc54641cc41d-393b2bfe" class="header-overview">Trips</h1>
+          <div id="w-node-a383cdf9-db54-14ae-0300-31e5a39646cd-393b2bfe" class="text-overview">Trips are full of group expenses like hotels, travel, food, and excursions. Marmo takes care of all that so you can enjoy your vacation.</div>
+        </div>
+        <div class="_3-row-col"><img src="{{ url_for('static', filename='images/dinner.png') }}" loading="lazy" id="w-node-_727055f6-d0a8-d5a8-e553-3f3f63a3b90e-393b2bfe" sizes="(max-width: 767px) 97.59375px, 150px" alt="A piece of digital art depicting a table and two chairs." class="image-overview">
+          <h1 id="w-node-_77c96b17-9f34-7aa2-be14-5b208b71ddee-393b2bfe" class="header-overview">Dinners</h1>
+          <div id="w-node-_278bf79f-d9e9-40f4-b83f-8678a599cba1-393b2bfe" class="text-overview">Relax and enjoy a meal with friends without worrying about how to split the check. Your server will love you for it.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="how-it-works wf-section">
+    <h1>How It Works</h1>
+    <div class="container">
+      <div class="vertical-flex">
+        <div class="horizontal-flex">
+          <div class="hiw-container">
+            <h1 class="hiw-header">Record Transactions</h1>
+            <div class="hiw-text subtext">Simply enter your transaction details or scan a receipt.<br><br>All members of your group can see the expense and settle up. Choose between our presets or customize how the bill is split.<br><br>Other members can add transactions and we’ll take care of the math to figure out who owes who.</div>
+          </div><img src="{{ url_for('static', filename='images/record.png') }}" loading="lazy" sizes="(max-width: 479px) 100vw, 300px" width="540" alt="A decorative element of a transaction sheet." class="hiw-image">
+        </div>
+        <div class="horizontal-flex reversed">
+          <div class="hiw-container">
+            <h1 class="hiw-header">Track Spending</h1>
+            <div class="hiw-text subtext">Each transaction is categorized so you can keep track of your spending habits.<br><br>Want to know how much that road trip was? How much you spent on groceries last month?<br><br>We keep track of your transactions and present it in a useful way.</div>
+          </div><img src="{{ url_for('static', filename='images/spending.png') }}" loading="lazy" sizes="(max-width: 479px) 100vw, 300px" width="540" alt="A piece of digital art depicting a bar graph." class="hiw-image">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer wf-section">
+    <div class="footertext">Copyright © 2022 Marmo Expense Sharing</div>
+    <a href="mailto:support@marmo.app" class="link">support@marmo.app<br>‍</a>
+  </div>
+  <div class="w-embed"></div>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=637793a71d771a399dba2d86" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="{{ url_for('static', filename='js/webflow.js') }}" type="text/javascript"></script>
+  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+</body>
+</html>
